--- a/css/variables.css
+++ b/css/variables.css
@@ -19,7 +19,7 @@ main{
   --primary-colour: #4458dc;
   --primary-colour2: #854fee;
   --title-colour: #141313;
-  --text-colour: #777777;
+  --text-colour: #0f0e0e;
   --border-colour: #201f1f17;
   /*--gradient-colour: linear-gradient(45deg, #1560BD 30%, #2E2D88 70%);*/
   --gradient-colour: linear-gradient(45deg,#922F8D 30%, #170C6A 70%);
