--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,10 @@
 .text-uppercase {
   text-transform: capitalize;
 }
+.text-center{
+  text-align: center;
+  align-items: center;
+}
 
 .button {
   padding: 0.8rem 2.2rem;
@@ -25,9 +29,16 @@
 }
 
 .button.primary-button:hover{
-    background: whitesmoke;
+    /*background: whitesmoke;
     background-clip: padding-box;
-    color: black;
+    color: black;*/
+    background:#03e9f4;
+    background-color:#03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
 }
 
 .button.primary-button::after , .button.secondary-button::after{
