--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@
 /* Global CSS */
 @import url(./global.css);
 
-/* Roboto*/
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+/* Roboto
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");*/
 body{
   color: #2D383A;
+  font:var(--roboto);
+  line-height: 1.6;
 }
 
 /* -------------------------------- Particles ------------------------------- */
@@ -15,13 +17,14 @@ body{
 #particles-js {
   width: 100%;
   height: 100%;
-  background-color: #C8C8CD;
+  background-color: #000000;
   position: fixed;
   z-index: -10;
 }
 .paragraph {
-  background:#C8C8CD;
-  color: #2D383A;
+  background:#000000;
+  color: #FFFFFF;
+  font:var(--roboto);
 }
 
 /* ------------------------------ End Particles ----------------------------- */
@@ -128,7 +131,7 @@ body::-webkit-scrollbar-thumb {
   /* padding: 3rem 0; */
   /* width: 90rem; */
   display: block;
-  /*max-width: 50%;*/
+  /*max-width: 70%;*/
   margin: auto;
   box-shadow: 20px 30px 40px rgba(0, 0, 0, 0.205);
   margin-bottom: 50px;
@@ -161,7 +164,6 @@ body::-webkit-scrollbar-thumb {
   }
 
   .banner-image > img {
-    margin-top: 30px !important;
   }
 
   .header-area .main-menu .navbar .navbar-brand {
