--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,21 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: 50px;
   padding: 5px;
   background: var(--gradient-colour);
+
 }
+.site-main .site-banner .banner-image > img:hover{
+box-shadow: 0 0 5px #03e9f4,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
+      }
+img:hover {
+box-shadow: 0 0 5px #03e9f4,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 100px #03e9f4;
+      }
+
 .class-img{
   display: block;
   max-width: 70%;
